--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   easy_localization: ^3.0.7
   pinput: ^5.0.0
   flutter_screenutil: ^5.9.3
+  flutter_localization: ^0.2.3
 
 dev_dependencies:
   flutter_test:
