add main home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   pinput: ^5.0.0
   flutter_screenutil: ^5.9.3
   flutter_localization: ^0.2.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
