--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_localization: ^0.2.3
   carousel_slider: ^5.0.0
+  contained_tab_bar_view: ^0.8.0
 
 dev_dependencies:
   flutter_test:
