--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_localization: ^0.2.3
   carousel_slider: ^5.0.0
   contained_tab_bar_view: ^0.8.0
+  google_maps_flutter: ^2.10.0
 
 dev_dependencies:
   flutter_test:
