--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   carousel_slider: ^5.0.0
   contained_tab_bar_view: ^0.8.0
   google_maps_flutter: ^2.10.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
